# OpenGL-Boilerplate

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: CMakeLists.txt  main.c
